# HiveMindCopilot

./: .gitignore  DEMO_GUIDE.md  HiveMind_Copilot_Presentation_Prompt.txt  HiveMind_Problem_Statement.txt  HiveMind_Project_Summary.md  docker-compose.yml  two_minute_demo_walkthrough.txt
docs/: BACKEND_IMPLEMENTATION_COMPLETE.md  CHAT_TESTING_GUIDE.md  CODEBASE_ORGANIZATION_COMPLETE.md  INSTALL_EXTENSION.md  README.md  TESTING_IMPLEMENTATION_COMPLETE.md  backend_deployment_guide.md  deployment_overview.md  frontend_deployment_guide.md  hivemind_backend.md  index.html
examples/: README.md
examples/token-service/: README.md  token_config.json  token_creator.js
hivemind/: Dockerfile  README.md  api_demo.py  deploy_registry.py  main.py  railway.toml  requirements.txt  setup.py
hivemind-clean/: Dockerfile.frontend  extension.ts  hivemind-copilot-0.3.0.vsix
hivemind/contracts/: AgentRegistry.sol
hivemind/tests/: run_tests.py  test_api.py  test_blockchain.py  test_blockchain_fixed.py  test_contract_deployment.py  test_contract_registry.py  test_core.py  test_hedera_integration.py
hivemind_copilot/: deploy.py  setup.sh
hivemind_copilot/docs/: CHAT_IMPLEMENTATION_SUMMARY.md  CLOUD_DEPLOYMENT.md  ENDPOINT_INTEGRATION_ANALYSIS.md  (+3 more)
hivemind_copilot/hivemind/: pyproject.toml  render.yaml  requirements.txt
hivemind_copilot/hivemind/docs/v2.26/: getting-started.txt
hivemind_copilot/hivemind/src/core/: orchestrator.py
hivemind_copilot/hivemind/src/utils/: config.py
hivemind_copilot/hivemind/tests/: conftest.py
utils/: download_examples.py  quick_docs_download.py
(+18 files in other folders)
